# backend/internal/models/api_models/get_base_info.go
@@ -1,16 +1,14 @@
 package models
 
-type Task struct {
+type GetTaskInfo struct {
 	UUID        string `gorm:"type:uuid;default:uuid_generate_v4()" json:"uuid"`
 	Name        string `json:"name"`
 	Description string `json:"description"`
-	Solution    string `json:"solution"`
-	Answer      string `json:"answer"`
 	Source      string `json:"source"`
 	CreatedBy   string `json:"created_by"`
-	Photo       string `json:"photo"`
 	SchoolClass int    `json:"school_class"`
 	Subject     string `json:"subject"`
+	IsSolve     string `json:"is_solve"`
 	Tag         string `json:"tag"`
 	Complexity  string `json:"complex"`
 }
