# backend/internal/models/api_models/get_tasks.go
@@ -1,0 +1,6 @@
+package models
+
+type GetTasks struct {
+	Class   int    `json:"class"`
+	Subject string `json:"subject"`
+}
